--- a/Results.tex
+++ b/Results.tex
@@ -106,7 +106,7 @@ As for the wild-type strain, we imaged RecB, computed histograms of RecB spot li
 \end{figure}
 
 % RecB recruitment in WT
-Whereas the lifetime of RecB spots informs us on how long RecB stays bound to DNA, the rate of appearance of spots helps us estimate the rate of recruitment of RecB to DSBs under each DNA damage condition. To do so, we used the RecB spot lifetime histogram fits to estimate the total number of slow-dissociating spots per timelapse. Since we determined that the appearance of a slow-dissociating spot corresponds to the binding of RecB to a DSB, this allowed us to calculate the number of RecB recruitments to DSBs per cell per hour (Figure \ref{Fig:recruitment}A). We expect that the recruitment rate of RecB to DSBs gives a close estimate of the rate of formation of DSBs by ciprofloxacin (see discussion). We estimated that under endogenous damage or low ciprofloxacin concentrations, 1 to 2 RecB molecules are recruited to DSBs per hour on average. A previous study had estimated that 18\% of cells generated an endogenous DSB per cell cycle\cite{Sinha2018}. Considering the division time in our growth conditions (35 min), this would correspond to a rate of $\sim$0.3 DSBs per hour, a value roughly consistent with our own estimate. As expected, the recruitment rate of RecB scaled with ciprofloxacin concentration, up to 8 RecB recruited to DNA per hour at 30 ng/ml. It has been reported that DSB repair from the point of RecBCD binding takes $\sim$15 min in \ecoli\cite{Wiktor2021}; therefore, it appears consistent that undergoing 8 DSBs per hour at 30 ng/ml ciprofloxacin (a concentration higher than the Minimum Inhibitory Concentration, MIC) will be lethal to most cells.
+Whereas the lifetime of RecB spots informs us on how long RecB stays bound to DNA, the rate of appearance of spots helps us estimate the rate of recruitment of RecB to DSBs under each DNA damage condition. To do so, we used the RecB spot lifetime histogram fits to estimate the total number of slow-dissociating spots per timelapse. Since we determined that the appearance of a slow-dissociating spot corresponds to the binding of RecB to a DSB, this allowed us to calculate the number of RecB recruitments to DSBs per cell per hour (Figure \ref{Fig:recruitment}A). We expect that the recruitment rate of RecB to DSBs gives a close estimate of the rate of formation of DSBs by ciprofloxacin (see discussion). We estimated that under endogenous damage or low ciprofloxacin concentrations, 1 to 2 RecB molecules are recruited to DSBs per hour on average. A previous study had estimated that 18\% of cells generated an endogenous DSB per cell cycle\cite{Sinha2018}. Considering the division time in our growth conditions (35 min), this would correspond to a rate of $\sim$0.3 DSBs per hour, a value roughly consistent with our own estimate. As expected, the recruitment rate of RecB scaled with ciprofloxacin concentration, up to 8 RecB recruited to DNA per hour at 30 ng/ml. It has been reported that DSB repair from the point of RecBCD binding takes $\sim$15 min in \ecoli\cite{Wiktor2021}; therefore, it appears consistent that undergoing 8 DSBs per hour at 30 ng/ml ciprofloxacin (a concentration higher than the Minimum Inhibitory Concentration, MIC) will cause multiple DSBs to be repaired simultaneously, and be lethal to most cells.
 
 % RecB recruitment in mutants
 Estimating the recruitment rate of RecB to DNA provided additional insight into the dynamics of DSB processing in the \dreca\ and \geneteneighty\ mutants (Figure \ref{Fig:recruitment}B). In the \dreca\ mutant, the rate of recruitment of RecB to DSBs was increased compared to wild-type cells, both in the presence and absence of ciprofloxacin. As in both cases the rate of DSB formation is expected to be the same between the wild-type and the \dreca\ mutant, we can hypothesise that this higher rate of RecB recruitment to DNA is due to multiple recruitment events on the same original DSB that cannot be repaired. In the mutant cells, RecBCD processes the DNA, but the generated ssDNA cannot be coated with the RecA protein, and is therefore likely to be degraded by cellular endo- and exonucleases such as SbcCD and ExoI\cite{Zahradka2009}. Degradation of the ssDNA would lead to a blunting of the DNA end, hence creating a new substrate for RecBCD binding. This deleterious cycle was previously reported to occur in cells lacking the RecA protein, eventually leading to full chromosome degradation\cite{Capaldo1975,Skarstad1993}. In our experiment, it results in multiple recruitments of RecB to DNA for each DSB.
@@ -117,10 +117,9 @@ In the \geneteneighty\ mutant, RecB recruitment is higher than in WT cells, but 
 % Part 3: Imaging RecA foci and filaments
 \subsection*{Ciprofloxacin exposure induces formation of RecA filaments and nucleoid compaction}
 
-%% RecA imaging
 During DSB processing, RecBCD facilitates the loading of the RecA protein on single-stranded DNA. To broaden our view of the repair process downstream of RecBCD, we imaged a tandem fusion of RecA with the fluorescent protein SYFP2 which was previously shown to preserve RecA functionality\cite{Wiktor2021}. Based on the fluorescence distribution in the cells (Supp. Figure \ref{SIFig:reca_structures}A), we identified three states of RecA: diffuse, forming a bright focus, or forming an elongated filament, which matches previous \emph{in-vivo} observations of RecA\cite{Wiktor2021}. Because of the large diversity of shapes observed, especially for RecA filaments, the detection of RecA structures by rule-based algorithms was challenging. Therefore, we designed and trained a deep-learning algorithm capable of classifying individual cells based on the three types of spatial distributions cited above (Supp. Figures \ref{SIFig:object_class} and \ref{SIFig:reca_structures}B). In cells that were not exposed to ciprofloxacin, the RecA-associated fluorescence was mostly diffuse, and occasionally formed a bright focus or filament. This is consistent with the expectation that RecA diffuses freely in the cell in the absence of DNA damage, and only polymerises on DNA in the event of an endogenous DSB. After one hour of exposure, the proportion of cells that contained a RecA filament had increased to $\sim$40\% at 20 ng/ml ciprofloxacin, and $\sim$60\% at 30 ng/ml. RecA foci on the other hand formed quickly following ciprofloxacin exposure (present in $\sim$40\% of the cells after 15 min of exposure to 30 ng/ml ciprofloxacin) and came back to endogenous damage level after $\sim$1 hour. Taken together, these results show that RecA foci are transient structures in the repair process that do not accumulate under high DNA damage, whereas RecA filaments accumulate under constant exposure to ciprofloxacin (see Discussion).
 
-% Part 4: Colocalisation of RecB with the nucleoid (to be reviewed/adjusted)
+% Part 4: Colocalisation of RecB with the nucleoid
 \subsection*{DNA-bound RecB colocalises with the bacterial nucleoid}
 
 \begin{figure*}[htbp]
@@ -131,13 +130,13 @@ During DSB processing, RecBCD facilitates the loading of the RecA protein on sin
 \end{figure*}
 
 % Nucleoid imaging
-RecA loading on ssDNA triggers the SOS response, which inhibits cell division, leading to cell filamentation. Previous studies have reported that the SOS response also triggers compaction of the bacterial nucleoid\cite{Odsbu2014}. To see if this was the case for breaks induced by ciprofloxacin in our experimental conditions, we stained DNA using the Sytox Green dye. The use of a green dye allowed us to concomitantly image RecB, and to correlate the position of DNA-bound RecB molecules with that of the nucleoid. Figure \ref{Fig:nucleoid}A shows representative images of the nucleoid and DNA-bound RecB after 60 minutes of exposure to different concentrations of ciprofloxacin. In untreated cells, the nucleoid was often observed to be bi-lobed, consistently with our previous observations\cite{Lepore2023}. After exposure to ciprofloxacin, the cells appeared elongated, and the nucleoid was often compacted in the centre of the cell. Due to nucleoid compaction, the total fraction of the cell occupied by the nucleoid decreased, from 40\% on average in untreated cells to 31\% in cells exposed to 30 ng/ml of ciprofloxacin for an hour (Supp. Figure \ref{SIFig:nucleoid_compaction}). In addition to the compaction, we observed that nucleoids were increasingly centred and the cells elongated upon increasing exposure to ciprofloxacin (in time and concentration), as shown in Supp. Figure \ref{SIFig:nucleoid_position}.
+RecA loading on ssDNA triggers the SOS response, which inhibits cell division, leading to cell filamentation. Previous studies have reported that the SOS response also triggers compaction of the bacterial nucleoid\cite{Odsbu2014}. To see if this was the case for breaks induced by ciprofloxacin in our experimental conditions, we stained DNA using the Sytox Green dye. The use of a green dye allowed us to concomitantly image RecB, and to correlate the position of DNA-bound RecB molecules (defined as RecB spots with a lifetime $>$10 sec, see Figure \ref{Fig:lifetimes}D) with that of the nucleoid. Figure \ref{Fig:nucleoid}A shows representative images of the nucleoid and DNA-bound RecB after 60 minutes of exposure to different concentrations of ciprofloxacin. In untreated cells, the nucleoid was often observed to be bi-lobed, consistently with our previous observations\cite{Lepore2023}. After exposure to ciprofloxacin, the cells appeared elongated, and the nucleoid was often compacted in the centre of the cell. Due to nucleoid compaction, the total fraction of the cell occupied by the nucleoid decreased, from 40\% on average in untreated cells to 31\% in cells exposed to 30 ng/ml of ciprofloxacin for an hour (Supp. Figure \ref{SIFig:nucleoid_compaction}). In addition to the compaction, we observed that nucleoids were increasingly centred and the cells elongated upon increasing exposure to ciprofloxacin (in time and concentration), as shown in Supp. Figure \ref{SIFig:nucleoid_position}.
 
 % Correlation of nucleoid and RecB spots
-As expected, DNA-bound RecB were found in close proximity to the nucleoid (Figure \ref{Fig:nucleoid}A). Figure \ref{Fig:nucleoid}B shows the strong overlap between the spatial distribution of DNA-bound RecB spots and the nucleoid density in the cell (Supp. Figure \ref{SIFig:recb_nucleoid_timepoints} shows the same data after different durations of ciprofloxacin exposure). Due to nucleoid compaction and centring, both the nucleoid density and the position of DNA-bound RecB remained within $\sim$2 µm either side of the cell centre, despite the cells having elongated significantly. This confirms that during DSB repair, the cell's DNA content is being physically constrained in a limited space at the centre of the cell, in which subsequent DSB formation and RecB recruitment will occur.
+Long-lived RecB spots were found in close proximity to the nucleoid (Figure \ref{Fig:nucleoid}A), which strengthens our interpretation that they are DNA-bound RecB molecules. Figure \ref{Fig:nucleoid}B shows the spatial distribution of DNA-bound RecB spots and the nucleoid density in the cell (Supp. Figure \ref{SIFig:recb_nucleoid_timepoints} shows the same data after different durations of ciprofloxacin exposure). Upon exposure to increasing ciprofloxacin concentrations, induction of the SOS response caused the cells to elongate significantly (from 3.1 µm $\pm$ 0.19 on average in the absence of ciprofloxacin to 5.5 µm $\pm$ 0.71 after 75 min of exposure to 30 ng/ml ciprofloxacin, Supp. Figure \ref{SIFig:Gam_cell_length}). Despite this, and due to compaction and centring, the nucleoid remained within $\sim$2 µm either side of the cell centre. The distribution of DNA-bound RecB molecules overlapped strongly with nucleoid density, indicating that as the nucleoid was compacted, newly formed DSBs triggered RecB recruitment at the centre of the cell, where the nucleoid is located. Furthermore, the close overlap of the distributions for DNA-bound RecB and nucleoid density strongly suggests that RecB binding occurs at random positions within the nucleoid, consistent with ciprofloxacin causing DSBs at random chromosomal locations.
 
 % Compaction of the nucleoid in mutants
 The differences in induction of the SOS response between the wild-type cells and the \dreca\ and \geneteneighty\ mutants resulted in different states of compaction for the bacterial nucleoid (Figure \ref{Fig:nucleoid}C, Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}). Whereas in the wild-type, exposure to ciprofloxacin triggered compaction and centring of the nucleoid, the inability of the \dreca\ mutant to induce the SOS response resulted in two separate nucleoid regions at the cell poles. Despite the absence of SOS induction, the nucleoid occupied a smaller fraction of the cell in the \dreca\ mutant after exposure to ciprofloxacin (Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}). This can be attributed to the progressive degradation of the bacterial chromosome by the repeated cycles of RecBCD binding (Figure \ref{Fig:recruitment}B). In the \geneteneighty\ mutant, the nucleoid appeared more disorganised than in wild-type cells, especially in the presence of 30 ng/ml ciprofloxacin, where it often formed irregular shapes and small segregated regions in the cell (Figure \ref{Fig:nucleoid}C). Furthermore, in the \geneteneighty\ mutant the nucleoid did not undergo compaction within the 75 min of our experiment (Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}). This might be a reflection of the less efficient RecA loading in this mutant, leading to different time dynamics of the SOS induction and either impaired or significantly delayed nucleoid compaction.
 
 % Colocalisation of RecB with the nucleoid in mutants
-In both mutant strains, the localisation of DNA-bound RecB overlapped with the bacterial nucleoid, consistent with RecB being recruited to DSBs (Figures \ref{Fig:nucleoid}C and \ref{Fig:nucleoid}D). In the \dreca\ mutant, addition of 30 ng/ml ciprofloxacin did not change the spatial distribution of nucleoid density or DNA-bound RecB, as expected in \dreca\ cells being unable to induce the SOS response, and therefore not undergoing nucleoid compaction. In the \geneteneighty\ mutant, both nucleoid density and DNA-bound RecB distributions form a single peak at the cell centre, in the presence and absence of ciprofloxacin. This is consistent with the \geneteneighty\ mutant having a higher baseline of SOS induction than wild-type cells, as previously reported\cite{Lepore2023}. The slightly broader distribution of nucleoid density and DNA-bound RecB position in the \geneteneighty\ mutant exposed to ciprofloxacin compared to the wild-type is matches well with the lesser nucleoid compaction observed in this mutant (Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}).
+In both mutant strains, the localisation of DNA-bound RecB overlapped with the bacterial nucleoid (Figure \ref{Fig:nucleoid}D), indicating that RecB binding occurred at random positions within the nucleoid, similarly to the wild-type. In the \dreca\ mutant, addition of 30 ng/ml ciprofloxacin did not change the spatial distribution of nucleoid density or DNA-bound RecB. This result was expected, as \dreca\ cells were unable to induce the SOS response, and therefore did not undergo nucleoid compaction. In the \geneteneighty\ mutant, both nucleoid density and DNA-bound RecB distributions form a single peak at the cell centre, in the presence and absence of ciprofloxacin. This is consistent with the \geneteneighty\ mutant having a higher baseline of SOS induction than wild-type cells, as previously reported\cite{Lepore2023}. The slightly broader distribution of nucleoid density and DNA-bound RecB position in the \geneteneighty\ mutant exposed to ciprofloxacin compared to the wild-type reinforces the hypothesis that nucleoid compaction is delayed in this mutant.
